@@ -1,3 +1,6 @@
+2012-03-25  Kirit Saelensminde  <kirit@felspar.com>
+ Silenced a clang warning.
+
 2012-01-28  Kirit Saelensminde  <kirit@felspar.com>
  Fixed up some build errors for the new null_ptr.
 
